--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>LOJA DE VINIS</h1>
     <h2>aqui temos variedade!</h2>
-    <p></p>
+    <p>Bem vindo a nossa loja de vinis, querendo encontrar o vinil do seu artista favorito? busque pelo nome ou categoria.</p>
 </body>
 </html>
